--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,9 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-//    implementation 'com.pkmmte.pkrss:pkrss:1.1.2'
+    implementation 'com.alibaba:fastjson:1.2.44'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
+    implementation 'com.google.code.gson:gson:2.8.1'
     implementation 'com.squareup.okhttp:okhttp:2.5.0'
     implementation 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
     implementation 'com.android.support:appcompat-v7:27.1.1'
