--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,10 @@ dependencies {
     implementation 'com.alibaba:fastjson:1.2.44'
     implementation 'com.squareup.okhttp3:okhttp:3.9.0'
     implementation 'com.google.code.gson:gson:2.8.1'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile 'io.reactivex:rxandroid:1.2.0'
     implementation 'com.squareup.okhttp:okhttp:2.5.0'
     implementation 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
     implementation 'com.android.support:appcompat-v7:27.1.1'
